# still-bott

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.org  Makefile.toml  TODO.md  docker-compose.yaml  miemon.yaml  production.yaml  schema.graphql
.github/workflows/: docker-publish.yml
api/: .dockerignore  Cargo.toml  Dockerfile  build.rs  run.sh
api/src/: app.rs  logger.rs  main.rs  minio.rs  model.rs  scheduler.rs  state.rs
api/src/gq/: _list_active_messages.rs  _list_task_fixed_time.rs  error.rs  load_session.rs  update_last_pub_date_task_rss.rs  upsert_email.rs
api/src/routes/: mod.rs
api/templates/: protected.html
client/: elm.json  index.html  main.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/OBSOLETE/: Ui.elm  UiShowcase.elm
client/src/: Common.elm  Dialog.elm  Id.elm  InteropDefinitions.elm  LocalTime.elm  Main.elm  Main.elm.d.ts  MessageParser.elm  Route.elm  ScalarCodecs.elm  Shared.elm  State.elm  Ui  View.elm
client/src/Hasura/: InputObject.elm  Mutation.elm  Object.elm  Query.elm  Scalar.elm  ScalarCodecs.elm  Subscription.elm  VerifyScalarCodecs.elm
client/src/Model/: Dashboard.elm  Media.elm  Message.elm  Tag.elm  Task.elm  TaskRss.elm  User.elm
client/src/Pages/: FixedTimeTask.elm  Home.elm  Media.elm  Message.elm  Register.elm  RssTask.elm  Tag.elm
client/tests/: MessageParserTest.elm
hasura/: config.yaml
hasura/metadata/: actions.graphql  actions.yaml
migrations/: 20230421030647_users.sql
src/: app.rs  config.rs  error.rs  main.rs  mpsc.rs  state.rs  twitter.rs
src/gq/: common.rs  delete_media.rs  get_self.rs  list_active_tasks.rs  list_active_tasks_by_user.rs  mod.rs  store_session.rs  upload_media.rs
src/routes/: api.rs  auth.rs  html.rs
templates/: login.html
traefik/: tls.yml  traefik.prod.yml  traefik.yml
(+125 files in other folders)
