[package]
name = "still-bott"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
headers = "0.3"
cynic = { version = "3", features = ["reqwest", "http-reqwest", "serde_json"] }
askama = "0.12.0"
async-session = "3.0.0"
async-sqlx-session = { version = "0.4.0", features = ["pg"] }
axum = { version = "0.6", features = ["headers", "multipart"] }
axum-extra = { version = "0.7.4", features = ["cookie-signed"] }
clokwerk = "0.4.0"
http = "0.2"
oauth2 = "4.1"
# Use Rustls because it makes it easier to cross-compile on CI
reqwest = { version = "0.11", default-features = false, features = [
  "rustls-tls",
  "json",
  "multipart",
  "stream"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.17.1"
envy = "0.4.2"
time = { version = "0.3", features = ["serde", "macros", "serde-human-readable", "parsing", "local-offset"] }
jsonwebtoken = "8.3.0"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
image = { version = "0.24.6", features = [] }
rust-s3 = { version = "0.33" }
base64 = "0.21.0"
chrono = "0.4.24"
derive-new = "0.5.9"
tokio-cron-scheduler = "0.9.4"
bytes = "1.4.0"
oauth = { version = "0.6", package = "oauth1-request" }
futures = "0.3.28"
strum = "0.25"
strum_macros = "0.25"
random-number = "0.1.8"
rss = "2.0.4"
mail-send = "0.4.0"
snafu = "0.7.5"
axum-macros = "0.3.8"

[build-dependencies]
cynic-codegen = "3"
